# yt-transcribe

./: .gitignore  README.md  extractor.py  pyproject.toml  transcriber.py  utils.py
.cursor/rules/: python.mdc
src/yt_transcribe/: extractor.py  transcriber.py
tests/: test_extractor.py  test_transcriber.py  test_utils.py
